chore: finish init

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Lint
+# superlinter
+super-linter-output/
+super-linter.log
+github_conf/
+biome.json
+
 # Logs
 logs
 *.log
@@ -137,3 +144,6 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# superlinter
+biome.json
