--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>infinite-automations/renovate-configs:major"]
+  "extends": ["github>infinite-automations/renovate-configs:automerge-major"]
 }
